src/pages/BrowseTask/component/ModalPage/ModalPage.module.scss
.modal_page{
  border: solid 1px black;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  overflow: auto;
  max-width: 500px;
  height: auto;
  min-height: 530px;
  max-height: 0.9vh;
  width: 100%;
  border-radius: 5px;
  // animation: 0.4s ease 0s 1 normal none running slideIn;

  .header{
    position: relative;
    min-height: 60px;
    display: flex;
    align-items: center;
  }

  .content{
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    overflow-y: scroll;
    padding: 10px 20px;
  }

  .footer{
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 60px;
    padding: 0px 20px;
  }
}

